// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entitiesMetaData creates all metaData info 1`] = `
Object {
  "branding": EntityMetaData {
    "betaFeature": false,
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "branding",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Branding",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Brandin",
    "updateFormDependencies": Array [],
  },
  "chatWidgets": EntityMetaData {
    "betaFeature": false,
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "chatWidgets",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Chat Widgets",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Chat Widget",
    "updateFormDependencies": Array [],
  },
  "customMetrics": EntityMetaData {
    "betaFeature": false,
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Metric Type",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "customMetrics",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Configuration/Statistics_Management/About_Statistics_Management.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Statistics Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Custom Metric",
    "updateFormDependencies": Array [],
  },
  "dashboards": EntityMetaData {
    "betaFeature": false,
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "dashboards",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Dashboards",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Dashboard",
    "updateFormDependencies": Array [],
  },
  "dataAccessReports": EntityMetaData {
    "betaFeature": false,
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Report Type",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [
      "users",
      "historicalReportFolders",
      "dashboards",
    ],
    "dependentEntity": "users",
    "entityName": "dataAccessReports",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Reporting/Access_Controlled_Reports/Create.htm",
    "modalListTableFields": Array [
      Object {
        "label": "First Name",
        "name": "firstName",
      },
      Object {
        "label": "Last Name",
        "name": "lastName",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
    ],
    "pageTitle": "Access Controlled Reports",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "First Name",
        "name": "firstName",
      },
      Object {
        "label": "Last Name",
        "name": "lastName",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
    ],
    "standardDashboards": Array [
      Object {
        "label": "Agent Details Table",
        "value": "8e7c8f83-4ed4-4ab9-942e-dbc66bdb016b",
      },
      Object {
        "label": "Agent State Table",
        "value": "b7486897-337d-4e1b-a3c9-1353ce6a4738",
      },
      Object {
        "label": "Interactions Completed Table",
        "value": "e19680cb-bee2-422b-961d-09a5479ec466",
      },
      Object {
        "label": "Interactions Dashboard",
        "value": "26a076ea-7dd7-4a61-bbdf-f2734a7a3b28",
      },
      Object {
        "label": "Interactions In Conversation Table",
        "value": "5bceb39e-a4f9-41f1-b56f-8ecf0daf2844",
      },
      Object {
        "label": "Interactions In IVR Table",
        "value": "bed51612-8168-4488-99df-2100d66f8095",
      },
      Object {
        "label": "Interactions In Queue Table",
        "value": "b00de9cc-645e-48c1-9248-2270224fc054",
      },
      Object {
        "label": "Overview Dashboard",
        "value": "1a861841-628b-4e4b-892c-5fbb178dfd3a",
      },
      Object {
        "label": "Queues Dashboard",
        "value": "5f08bfde-3a79-4aa3-8586-42a1a03ffa90",
      },
      Object {
        "label": "Queue Details Table",
        "value": "1c6a29a9-6020-4543-82f8-490728e53876",
      },
      Object {
        "label": "Resources Dashboard",
        "value": "0ad70ddc-d3d4-458e-8019-20fc46122a52",
      },
    ],
    "subEntityName": "",
    "title": "Access Controlled Report",
    "updateFormDependencies": Array [
      "users",
      "historicalReportFolders",
      "dashboards",
      "roles",
      "permissions",
    ],
  },
  "emailTemplates": EntityMetaData {
    "betaFeature": false,
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "emailTemplates",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Configuration/Email_Templates/Updating_Email_Templates.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Email Templates",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Email Template",
    "updateFormDependencies": Array [],
  },
  "flows": EntityMetaData {
    "betaFeature": false,
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "flows",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Flows",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Flow",
    "updateFormDependencies": Array [],
  },
  "groups": EntityMetaData {
    "associations": Object {
      "outboundIdentifierLists": Array [
        "groups",
        "outboundIdentifierLists",
      ],
      "reasonLists": Array [
        "groups",
        "reasonLists",
      ],
      "users": Array [
        "groups",
        "users",
      ],
    },
    "betaFeature": false,
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "users",
    "entityName": "groups",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Managing%20Users/Creating_Groups.htm",
    "memberListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "modalListTableFields": Array [
      Object {
        "label": "First Name",
        "name": "firstName",
      },
      Object {
        "label": "Last Name",
        "name": "lastName",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
    ],
    "outboundIdentifiersFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Group Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "First Name",
        "name": "firstName",
      },
      Object {
        "label": "Last Name",
        "name": "lastName",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
    ],
    "subEntityName": "",
    "title": "Group",
    "updateFormDependencies": Array [
      "users",
    ],
  },
  "historicalReportFolders": EntityMetaData {
    "betaFeature": false,
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "historicalReportFolders",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Historical Report Folders",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Historical Report Folder",
    "updateFormDependencies": Array [],
  },
  "identityProviders": EntityMetaData {
    "betaFeature": false,
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "identityProviders",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Identity Providers",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Identity Provider",
    "updateFormDependencies": Array [],
  },
  "interactionMonitoring": EntityMetaData {
    "betaFeature": true,
    "columns": Array [
      Object {
        "active": true,
        "name": "InteractionId",
      },
      Object {
        "active": true,
        "name": "Agent",
      },
      Object {
        "active": true,
        "name": "CustomerId",
      },
      Object {
        "active": true,
        "name": "ContactPoint",
      },
      Object {
        "active": true,
        "name": "Flow",
      },
      Object {
        "active": true,
        "name": "Channel",
      },
      Object {
        "active": true,
        "name": "Direction",
      },
      Object {
        "active": false,
        "name": "Presence State",
      },
      Object {
        "active": false,
        "name": "Start Date",
      },
      Object {
        "active": true,
        "name": "StartTime",
      },
      Object {
        "active": true,
        "name": "ElapsedTime",
      },
      Object {
        "active": true,
        "name": "Monitoring",
      },
      Object {
        "active": false,
        "name": "Groups",
      },
      Object {
        "active": false,
        "name": "Skills",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "interactionMonitoring",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Interaction Monitoring",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Interaction Monitorin",
    "updateFormDependencies": Array [],
  },
  "listTypes": EntityMetaData {
    "betaFeature": false,
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "listTypes",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "List Types",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "List Type",
    "updateFormDependencies": Array [],
  },
  "lists": EntityMetaData {
    "betaFeature": false,
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "List Type",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [
      "listTypes",
    ],
    "dependentEntity": "",
    "entityName": "lists",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Configuration/Lists/Lists.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Lists",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "listItems",
    "title": "List",
    "updateFormDependencies": Array [],
  },
  "messageTemplates": EntityMetaData {
    "betaFeature": false,
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Type",
      },
      Object {
        "active": true,
        "name": "Channels",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "messageTemplates",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Configuration/Messaging_Templates/Creating_Messaging_Templates.htm",
    "memberListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Message Templates",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Message Template",
    "updateFormDependencies": Array [],
  },
  "outboundIdentifierLists": EntityMetaData {
    "betaFeature": false,
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "outboundIdentifiers",
    "entityName": "outboundIdentifierLists",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "memberListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Value",
        "name": "value",
      },
      Object {
        "label": "Channel Type",
        "name": "channelType",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Outbound Identifier Lists",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Value",
        "name": "value",
      },
      Object {
        "label": "Channel Type",
        "name": "channelType",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Outbound Identifier List",
    "updateFormDependencies": Array [
      "outboundIdentifiers",
    ],
  },
  "outboundIdentifiers": EntityMetaData {
    "betaFeature": false,
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Value",
      },
      Object {
        "active": true,
        "name": "channelType",
      },
      Object {
        "active": false,
        "name": "flowId",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [
      "flows",
    ],
    "dependentEntity": "",
    "entityName": "outboundIdentifiers",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Outbound Identifiers",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Outbound Identifier",
    "updateFormDependencies": Array [
      "flows",
    ],
  },
  "permissions": EntityMetaData {
    "betaFeature": false,
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "permissions",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Permissions",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Permission",
    "updateFormDependencies": Array [],
  },
  "platformRoles": EntityMetaData {
    "betaFeature": false,
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "platformRoles",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Platform Roles",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Platform Role",
    "updateFormDependencies": Array [],
  },
  "protectedBranding": EntityMetaData {
    "betaFeature": false,
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "protectedBranding",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Protected Branding",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Protected Brandin",
    "updateFormDependencies": Array [],
  },
  "reasonLists": EntityMetaData {
    "betaFeature": false,
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "reasonLists",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Managing%20Users/Presence%20Reasons/Creating_Presence_Reason_Lists.htm",
    "memberListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Reason List Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Reason List",
    "updateFormDependencies": Array [],
  },
  "roles": EntityMetaData {
    "betaFeature": true,
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Permissions",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "permissions",
    "entityName": "roles",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Managing%20Users/Adding_roles.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Role Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Role",
    "updateFormDependencies": Array [
      "permissions",
    ],
  },
  "skills": EntityMetaData {
    "associations": Object {
      "outboundIdentifierLists": Array [
        "skills",
        "outboundIdentifierLists",
      ],
      "users": Array [
        "users",
        "skills",
      ],
    },
    "betaFeature": false,
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Has Proficiency",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "users",
    "entityName": "skills",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Managing%20Users/Creating_Skills.htm",
    "memberListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "modalListTableFields": Array [
      Object {
        "label": "First Name",
        "name": "firstName",
      },
      Object {
        "label": "Last Name",
        "name": "lastName",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
    ],
    "pageTitle": "Skill Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "First Name",
        "name": "firstName",
      },
      Object {
        "label": "Last Name",
        "name": "lastName",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
    ],
    "subEntityName": "",
    "title": "Skill",
    "updateFormDependencies": Array [
      "users",
    ],
  },
  "standardDashboards": EntityMetaData {
    "betaFeature": false,
    "columns": Array [],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "standardDashboards",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Home.htm",
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Standard Dashboards",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Standard Dashboard",
    "updateFormDependencies": Array [],
  },
  "transferLists": EntityMetaData {
    "betaFeature": false,
    "columns": Array [
      Object {
        "active": true,
        "name": "Name",
      },
      Object {
        "active": true,
        "name": "Description",
      },
      Object {
        "active": true,
        "name": "Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [],
    "dependentEntity": "",
    "entityName": "transferLists",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Configuration/Transfer_Lists/Creating_Transfer_Lists.htm",
    "memberListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "Transfer Lists",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "Transfer List",
    "updateFormDependencies": Array [],
  },
  "users": EntityMetaData {
    "associations": Object {
      "groups": Array [
        "groups",
        "users",
      ],
      "messageTemplates": Array [
        "users",
        "messageTemplates",
      ],
      "outboundIdentifierLists": Array [
        "users",
        "outboundIdentifierLists",
      ],
      "reasonLists": Array [
        "users",
        "reasonLists",
      ],
      "skills": Array [
        "users",
        "skills",
      ],
      "transferLists": Array [
        "users",
        "transferLists",
      ],
    },
    "betaFeature": false,
    "columns": Array [
      Object {
        "active": true,
        "name": "First Name",
      },
      Object {
        "active": true,
        "name": "Last Name",
      },
      Object {
        "active": true,
        "name": "Email",
      },
      Object {
        "active": true,
        "name": "External Id",
      },
      Object {
        "active": true,
        "name": "Role",
      },
      Object {
        "active": true,
        "name": "Presence",
      },
      Object {
        "active": true,
        "name": "Invitation Status",
      },
      Object {
        "active": true,
        "name": "Platform Status",
      },
    ],
    "confirmationDialog": Object {
      "falseButtonText": "",
      "message": "",
      "trueButtonText": "",
    },
    "createFormDependencies": Array [
      "roles",
      "platformRoles",
      "identityProviders",
    ],
    "dependentEntity": "",
    "entityName": "users",
    "entityTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "helpLink": "/Help/Content/Managing%20Users/Adding_users.htm",
    "memberListTableFields": Array [
      Object {
        "label": "First Name",
        "name": "firstName",
      },
      Object {
        "label": "Last Name",
        "name": "lastName",
      },
      Object {
        "label": "Email",
        "name": "email",
      },
    ],
    "modalListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "pageTitle": "User Management",
    "sdkCall": Object {
      "data": Object {},
      "module": "entities",
    },
    "sidePanelListTableFields": Array [
      Object {
        "label": "Name",
        "name": "name",
      },
      Object {
        "label": "Description",
        "name": "description",
      },
    ],
    "subEntityName": "",
    "title": "User",
    "updateFormDependencies": Array [
      "roles",
      "platformRoles",
      "identityProviders",
    ],
  },
}
`;

exports[`entitiesMetaData entityApiRequest, passing in mainEntity as apiMethod 1`] = `
Object {
  "command": "getMockEntity",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/get-mock-entity-response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in mainEntity as apiMethod 2`] = `
Object {
  "command": "createMockEntity",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/create-mock-entity-response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in mainEntity as apiMethod 3`] = `
Object {
  "command": "updateMockEntity",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/update-mock-entity-response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in singleMainEntity as apiMethod 1`] = `
Object {
  "command": "getMockEntit",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/get-mock-entit-response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in singleMainEntity as apiMethod 2`] = `
Object {
  "command": "createMockEntit",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/create-mock-entit-response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in singleMainEntity as apiMethod 3`] = `
Object {
  "command": "updateMockEntit",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/update-mock-entit-response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in subEntity as apiMethod 1`] = `
Object {
  "command": "get",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/get--response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in subEntity as apiMethod 2`] = `
Object {
  "command": "create",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/create--response",
}
`;

exports[`entitiesMetaData entityApiRequest, passing in subEntity as apiMethod 3`] = `
Object {
  "command": "update",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/update--response",
}
`;

exports[`entitiesMetaData entityListItemApiRequest, passing in any other apiMethod 1`] = `
Object {
  "command": "getListMember",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/get--list-member-response",
}
`;

exports[`entitiesMetaData entityListItemApiRequest, passing in any other apiMethod 2`] = `
Object {
  "command": "createListMember",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/create--list-member-response",
}
`;

exports[`entitiesMetaData entityListItemApiRequest, passing in update as apiMethod 1`] = `
Object {
  "command": "update",
  "data": Object {},
  "module": "entities",
  "topic": "cxengage/entities/update--response",
}
`;
